--- a/EasyFood/app/src/main/res/layout/activity_main.xml
+++ b/EasyFood/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     <TextView
         android:id="@+id/textoInicio"
         android:layout_width="match_parent"
@@ -15,6 +23,7 @@
         android:text="@string/texto_inicio"
         android:textAlignment="center"
         android:textSize="@dimen/tittle_size"
+        android:layout_below="@id/toolbar2"
         android:textStyle="italic" />
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
