--- a/EasyFood/app/src/main/res/layout/activity_main.xml
+++ b/EasyFood/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/imagen_producto_1"
                 android:layout_toEndOf="@id/imagen_producto_1"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -71,7 +71,7 @@
                 android:layout_toRightOf="@id/imagen_producto_2"
                 android:layout_toEndOf="@id/imagen_producto_2"
                 android:layout_below="@id/imagen_producto_1"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -90,7 +90,7 @@
                 android:layout_toRightOf="@id/imagen_producto_3"
                 android:layout_toEndOf="@id/imagen_producto_3"
                 android:layout_below="@id/imagen_producto_2"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -109,7 +109,7 @@
                 android:layout_toRightOf="@id/imagen_producto_4"
                 android:layout_toEndOf="@id/imagen_producto_4"
                 android:layout_below="@id/imagen_producto_3"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -128,7 +128,7 @@
                 android:layout_toRightOf="@id/imagen_producto_5"
                 android:layout_toEndOf="@id/imagen_producto_5"
                 android:layout_below="@id/imagen_producto_4"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -147,7 +147,7 @@
                 android:layout_toRightOf="@id/imagen_producto_6"
                 android:layout_toEndOf="@id/imagen_producto_6"
                 android:layout_below="@id/imagen_producto_5"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -166,7 +166,7 @@
                 android:layout_toRightOf="@id/imagen_producto_7"
                 android:layout_toEndOf="@id/imagen_producto_7"
                 android:layout_below="@id/imagen_producto_6"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -185,7 +185,7 @@
                 android:layout_toRightOf="@id/imagen_producto_8"
                 android:layout_toEndOf="@id/imagen_producto_8"
                 android:layout_below="@id/imagen_producto_7"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -204,7 +204,7 @@
                 android:layout_toRightOf="@id/imagen_producto_9"
                 android:layout_toEndOf="@id/imagen_producto_9"
                 android:layout_below="@id/imagen_producto_8"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
@@ -223,7 +223,7 @@
                 android:layout_toRightOf="@id/imagen_producto_10"
                 android:layout_toEndOf="@id/imagen_producto_10"
                 android:layout_below="@id/imagen_producto_9"
-                android:text="@string/producto_string"
+                android:text="@string/label_producto"
                 android:paddingTop="@dimen/padding_top_categoria"
                 android:textSize="@dimen/normal_text_size" />
 
