Vista, Tab Postres

--- a/EasyFood/app/src/main/res/layout/fragment_postre.xml
+++ b/EasyFood/app/src/main/res/layout/fragment_postre.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +9,334 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:text="@string/tab_postre"
+        android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textAlignment="center"/>
+        android:id="@+id/texto_postre"/>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scrollView_desayunos"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/texto_postre">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:id="@+id/imagen_postre_1"
+                app:srcCompat="@drawable/brownie"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_alignParentTop="true"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/imagen_postre_1"
+                android:layout_toRightOf="@id/imagen_postre_1"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_brownie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/producto_postre_1"
+                android:layout_toRightOf="@id/producto_postre_1"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_1_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_2"
+                app:srcCompat="@drawable/bunuelo"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_1"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_1"
+                android:layout_toEndOf="@id/imagen_postre_2"
+                android:layout_toRightOf="@id/imagen_postre_2"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_bunuelo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_1"
+                android:layout_toEndOf="@id/producto_postre_2"
+                android:layout_toRightOf="@id/producto_postre_2"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_2_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_3"
+                app:srcCompat="@drawable/cheesecake"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_2"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_2"
+                android:layout_toEndOf="@id/imagen_postre_3"
+                android:layout_toRightOf="@id/imagen_postre_3"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_cheesecake"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_2"
+                android:layout_toEndOf="@id/producto_postre_3"
+                android:layout_toRightOf="@id/producto_postre_3"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_3_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+
+            <ImageView
+                android:id="@+id/imagen_postre_4"
+                app:srcCompat="@drawable/cpulant"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_3"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_3"
+                android:layout_toEndOf="@id/imagen_postre_4"
+                android:layout_toRightOf="@id/imagen_postre_4"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_cpulant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_3"
+                android:layout_toEndOf="@id/producto_postre_4"
+                android:layout_toRightOf="@id/producto_postre_4"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_4_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_5"
+                app:srcCompat="@drawable/helado"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_4"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_4"
+                android:layout_toEndOf="@id/imagen_postre_5"
+                android:layout_toRightOf="@id/imagen_postre_5"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_helado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_4"
+                android:layout_toEndOf="@id/producto_postre_5"
+                android:layout_toRightOf="@id/producto_postre_5"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_5_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_6"
+                app:srcCompat="@drawable/pistacho"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_5"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_5"
+                android:layout_toEndOf="@id/imagen_postre_6"
+                android:layout_toRightOf="@id/imagen_postre_6"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_pistacho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_5"
+                android:layout_toEndOf="@id/producto_postre_6"
+                android:layout_toRightOf="@id/producto_postre_6"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_6_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_7"
+                app:srcCompat="@drawable/tiramisu"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_6"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_6"
+                android:layout_toEndOf="@id/imagen_postre_7"
+                android:layout_toRightOf="@id/imagen_postre_7"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_tiramisu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_6"
+                android:layout_toEndOf="@id/producto_postre_7"
+                android:layout_toRightOf="@id/producto_postre_7"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_7_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_8"
+                app:srcCompat="@drawable/torta_hojaldre"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_7"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_7"
+                android:layout_toEndOf="@id/imagen_postre_8"
+                android:layout_toRightOf="@id/imagen_postre_8"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_torta_hojaldre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_7"
+                android:layout_toEndOf="@id/producto_postre_8"
+                android:layout_toRightOf="@id/producto_postre_8"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_8_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_9"
+                app:srcCompat="@drawable/torta_zanahoria"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_8"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_8"
+                android:layout_toEndOf="@id/imagen_postre_9"
+                android:layout_toRightOf="@id/imagen_postre_9"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_torta_zanahoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_8"
+                android:layout_toEndOf="@id/producto_postre_9"
+                android:layout_toRightOf="@id/producto_postre_9"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_9_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/imagen_postre_10"
+                app:srcCompat="@drawable/turca"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:layout_below="@id/imagen_postre_9"
+                android:padding="@dimen/padding_regular" />
+
+            <TextView
+                android:id="@+id/producto_postre_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_9"
+                android:layout_toEndOf="@id/imagen_postre_10"
+                android:layout_toRightOf="@id/imagen_postre_10"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/label_producto"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postre_turca"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen_postre_9"
+                android:layout_toEndOf="@id/producto_postre_10"
+                android:layout_toRightOf="@id/producto_postre_10"
+                android:paddingTop="@dimen/padding_top_categoria"
+                android:text="@string/postre_10_nombre"
+                android:textSize="@dimen/normal_text_size" />
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
